terraform/phase_two/ecs.tf
resource "aws_iam_role" "rearc-quest-ecs-task-execution-role" {
  name = "rearc-quest-ecs-task-execution-role"

  assume_role_policy = <<EOF
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Action": "sts:AssumeRole",
      "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
      },
      "Effect": "Allow"
    }
  ]
}
EOF
}

resource "aws_iam_role_policy" "rearc-quest-ecs-task-execution-policy" {
  role = aws_iam_role.rearc-quest-ecs-task-execution-role.name

  policy = <<POLICY
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Action": [
        "ecr:GetAuthorizationToken",
        "ecr:BatchCheckLayerAvailability",
        "ecr:GetDownloadUrlForLayer",
        "ecr:BatchGetImage",
        "logs:CreateLogGroup",
        "logs:CreateLogStream",
        "logs:PutLogEvents"
      ],
      "Resource": "*"
    }
  ]
}
POLICY
}

resource "aws_ecs_cluster" "rearc-quest-ecs-cluster" {
  name = "rearc-quest-ecs-cluster"
}

resource "aws_cloudwatch_log_group" "rearc-quest-task-log-group" {
  name = "rearc-quest-task-log-group"
}

resource "aws_ecs_task_definition" "rearc-quest-task-definition" {
    family = "rearc-quest-task-definition"
    container_definitions = jsonencode([
        {
            "name": "rearc-quest-container-definition",
            "image": "${var.ecr_repo_url}:latest",
            "essential": true,
            "memoryReservation": 128
            "portMappings": [
                {
                    "containerPort": 3000,
                    "hostPort": 3000,
                    "protocol": "tcp"
                }
            ]
            "logConfiguration": {
                "logDriver": "awslogs",
                "options": {
                    "awslogs-group": "${aws_cloudwatch_log_group.rearc-quest-task-log-group.name}"
                    "awslogs-region": "${var.aws_region}"
                    "awslogs-stream-prefix": "ecs"
                }
            }
        }
    ])
    execution_role_arn = aws_iam_role.rearc-quest-ecs-task-execution-role.arn
    network_mode = "awsvpc"
    cpu = 256
    memory = 512
    requires_compatibilities = ["FARGATE"]
}

resource "aws_ecs_service" "rearc-quest-ecs-service" {
  name = "rearc-quest-ecs-service"
  cluster = aws_ecs_cluster.rearc-quest-ecs-cluster.id
  task_definition = aws_ecs_task_definition.rearc-quest-task-definition.id
  desired_count = 1
  launch_type = "FARGATE"

  network_configuration {
    security_groups = [aws_security_group.rearc-quest-ecs-security-group.id]
    subnets = [aws_subnet.rearc-quest-subnet-1.id, aws_subnet.rearc-quest-subnet-2.id, aws_subnet.rearc-quest-subnet-3.id]
    assign_public_ip = true
  }

  load_balancer {
    target_group_arn = aws_alb_target_group.rearc-quest-target-group.id
    container_name = "rearc-quest-container-definition"
    container_port = "3000"
  }
}
