terraform/phase_two/sercurity_groups.tf
resource "aws_security_group" "rearc-quest-alb-security-group" {
  name = "rearc-quest-alb-security-group"
  vpc_id = aws_vpc.rearc-quest-vpc.id

    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port       = 0
        to_port         = 0
        protocol        = "-1"
        cidr_blocks     = ["0.0.0.0/0"]
    }
}

resource "aws_security_group" "rearc-quest-ecs-security-group" {
  name = "rearc-quest-ecs-security-group"
  vpc_id = aws_vpc.rearc-quest-vpc.id
  
    ingress {
        from_port   = 3000
        to_port     = 3000
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port       = 0
        to_port         = 0
        protocol        = "-1"
        cidr_blocks     = ["0.0.0.0/0"]
    }
}
